src-tauri/log.txt
cargo :     Checking ta
uri-appaudio-switcher v
0.1.0 (C:\閾ｪ菴懊・繝ｭ繧ｸ繧ｧ繧ｯ
繝・髻ｳ螢ｰ蜃ｺ蜉帛・繧頑崛縺・src-tau
ri)
発生場所 行:1 文字:1
+ cargo check 2>&1 | Ou
t-File -FilePath log.tx
t -Encoding utf8
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo     
         : NotSpecified
: (        Checking ta.
..繧頑崛縺・sr    c-tauri):S
tring) [], R    emoteEx
ception
    + FullyQualifiedErr
orI    d : NativeComman
dError
 
error[E0433]: failed to
 resolve: could not fin
d `windows_core` in the
 list of imported crate
s
  --> src\audio_manager
.rs:68:1
   |
68 | #[windows::core::i
nterface("f8679f50-d128
-4fd3-acc1-4471cd697261
")]
   | ^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^
^^^ could not find `win
dows_core` in the list 
of imported crates
   |
   = note: this error o
riginates in the attrib
ute macro `windows::cor
e::interface` (in Night
ly builds, run with -Z 
macro-backtrace for mor
e info)

error[E0425]: cannot fi
nd value `VT_LPWSTR` in
 this scope
  --> src\audio_manager
.rs:45:55
   |
45 |                   
  if prop.anonymous.ano
nymous.vt == VT_LPWSTR.
0 {
   |                   
                       
             ^^^^^^^^^ 
not found in this scope

warning: unused import:
 `windows::Win32::Syste
m::Com::StructuredStora
ge::*`
 --> src\audio_manager.
rs:5:5
  |
5 | use windows::Win32:
:System::Com::Structure
dStorage::*;
  |     ^^^^^^^^^^^^^^^
^^^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^
  |
  = note: `#[warn(unuse
d_imports)]` (part of `
#[warn(unused)]`) on by
 default

error[E0425]: cannot fi
nd function, tuple stru
ct or tuple variant `Pr
opVariantClear` in this
 scope
  --> src\audio_manager
.rs:51:29
   |
51 |                   
  let _ = PropVariantCl
ear(&mut prop);
   |                   
          ^^^^^^^^^^^^^
^^^ not found in this s
cope

Some errors have detail
ed explanations: E0425,
 E0433.
For more information ab
out an error, try `rust
c --explain E0425`.
warning: `tauri-appaudi
o-switcher` (bin "tauri
-appaudio-switcher") ge
nerated 1 warning
error: could not compil
e `tauri-appaudio-switc
her` (bin "tauri-appaud
io-switcher") due to 3 
previous errors; 1 warn
ing emitted
